--- a/index.html
+++ b/index.html
@@ -45,47 +45,46 @@
 					<h4 class="reviews__all"><a href="javascript:void(0)">Все отзывы</a></h4>
 				</div>
 				<div class="reviews__right">
-					<div class="reviews__likes">
-						<span class="reviews__heart"></span>131</div>
-						<div class="reviews__comments">
-							<span class="reviews__quote"></span>14</div>
-						</div>
-					</div>
-					<div class="comments-wrap">
-						<div class="comments">
-							<h3 class="comments__title">Самуил
-								<span class="comments__date">13 октября 2011</span>
-							</h3>
-							<p class="comments__text">Привет, Верунь!ниче себе ты крутая.фотка класс!!!!
-								<span class="comments__triangle"></span>
-							</p>
-						</div>
-						<div class="comments">
-							<h3 class="comments__title comments__title--two">Лилия Семёновна
-								<span class="comments__date comments__date--two">14 октября 2011</span>
-							</h3>
-							<p class="comments__text comments__text--two">Вероника, здравствуйте! Есть такой вопрос: Особый вид куниц жизненно стабилизирует кинетический момент, это и есть всемирно известный центр огранки алмазов и торговли бриллиантами?
-								<span class="comments__triangle"></span>
-							</p>
-						</div>
-						<div class="comments">
-							<h3 class="comments__title comments__title--three">Лилия Семёновна
-								<span class="comments__date comments__date--three">14 октября 2011</span>
-							</h3>
-							<p class="comments__text comments__text--three">Вероника, здравствуйте! Есть такой вопрос: Особый вид куниц жизненно стабилизирует кинетический момент?
-								<span class="comments__triangle"></span>
-							</p>
-						</div>
-					</div>
+					<a class="reviews__likes" href="javascript:void(0)"><span class="reviews__heart"></span>131</a>
+					<a class="reviews__comments" href="javascript:void(0)"><span class="reviews__quote"></span>14</a>
 				</div>
-				<form action="javascript:void(0)" method="POST" class="new-comment">
-					<div class="container">
-						<textarea name="message" rows="2" class="new-comment__message"></textarea>
-						<input type="submit"class="new-comment__btn" value="Написать консультанту">
-					</div>
-				</form>
 			</div>
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-			<script src="js/common.js"></script>
-		</body>
-		</html>
+			<div class="comments-wrap">
+				<div class="comments">
+					<h3 class="comments__title">Самуил
+						<span class="comments__date">13 октября 2011</span>
+					</h3>
+					<p class="comments__text">Привет, Верунь!ниче себе ты крутая.фотка класс!!!!
+						<span class="comments__triangle"></span>
+					</p>
+				</div>
+				<div class="comments">
+					<h3 class="comments__title comments__title--two">Лилия Семёновна
+						<span class="comments__date comments__date--two">14 октября 2011</span>
+					</h3>
+					<p class="comments__text comments__text--two">Вероника, здравствуйте! Есть такой вопрос: Особый вид куниц жизненно стабилизирует кинетический момент, это и есть всемирно известный центр огранки алмазов и торговли бриллиантами?
+						<span class="comments__triangle"></span>
+					</p>
+				</div>
+				<div class="comments">
+					<h3 class="comments__title comments__title--three">Лилия Семёновна
+						<span class="comments__date comments__date--three">14 октября 2011</span>
+					</h3>
+					<p class="comments__text comments__text--three">Вероника, здравствуйте! Есть такой вопрос: Особый вид куниц жизненно стабилизирует кинетический момент?
+						<span class="comments__triangle"></span>
+					</p>
+				</div>
+			</div>
+		</div>
+		<form action="javascript:void(0)" method="POST" class="new-comment">
+			<div class="container">
+				<textarea name="message" rows="2" class="new-comment__message"></textarea>
+				<input type="submit"class="new-comment__btn" value="Написать консультанту">
+			</div>
+		</form>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="libs/jquery.spincrement.min.js"></script>
+	<script src="js/common.js"></script>
+</body>
+</html>
