--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
 					<h4 class="reviews__all"><a href="javascript:void(0)">Все отзывы</a></h4>
 				</div>
 				<div class="reviews__right">
-					<a class="reviews__likes" href="javascript:void(0)"><span class="reviews__heart"></span>131</a>
-					<a class="reviews__comments" href="javascript:void(0)"><span class="reviews__quote"></span>14</a>
+					<a class="reviews__likes" href="javascript:void(0)">
+						<span class="reviews__heart"></span>
+						<span class="reviews__quantity reviews__quantity--likes">131</span>
+					</a>
+					<a class="reviews__comments" href="javascript:void(0)">
+						<span class="reviews__quote"></span>
+						<span class="reviews__quantity reviews__quantity--comments">14</span>
+					</a>
 				</div>
 			</div>
 			<div class="comments-wrap">
